tests/compile-fail/integration__integration__enums__enum_arg_not_ident.snap
---
source: tests/integration/enums.rs
expression: stderr
---
error: invalid identifier: ax@3
  ┌─ <mapfile-1>:3:12
  │
3 │ 999 S(enum="ax@3")
  │            ^^^^^^


